--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,35 @@
+accelerate==1.5.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
 aiolimiter==1.2.1
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
 asttokens==3.0.0
 attrs==25.1.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
+datasets==3.4.0
 debugpy==1.8.12
 decorator==5.2.1
+dill==0.3.8
 distro==1.9.0
+dreamy==0.1.5.1
 et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.17.0
 fonttools==4.56.0
-fsspec==2025.2.0
+frozenlist==1.5.0
+fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.29.3
 idna==3.10
 ipykernel==6.29.5
 ipython==9.0.0
@@ -38,6 +48,8 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 narwhals==1.28.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
@@ -54,9 +66,11 @@ pillow==11.1.0
 platformdirs==4.3.6
 plotly==6.0.0
 prompt_toolkit==3.0.50
+propcache==0.3.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
@@ -67,7 +81,10 @@ pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
 rpds-py==0.23.1
+safetensors==0.5.3
 scikit-learn==1.6.1
 scikit-posthocs==0.11.2
 scipy==1.15.2
@@ -79,10 +96,15 @@ stack-data==0.6.3
 statsmodels==0.14.4
 sympy==1.13.1
 threadpoolctl==3.5.0
+tokenizers==0.21.1
 torch==2.6.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.49.0
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 wcwidth==0.2.13
+xxhash==3.5.0
+yarl==1.18.3
